Add and Update Event Table
